--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,2 @@
 theme: jekyll-theme-cayman
-<html>
-      <head>
-      </head>
-</html>
+![i love spongebob](/assets/images/spongebob.jpg "Spongebob")
