--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-![i love spongebob](/assets/images/spongebob.jpg "Spongebob")
+![i love spongebob](/assets/images/Spongebob-squarepant.png "Spongebob")
